# bilibili_agent

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: build-test.yml  build.yml
scripts/: build.sh  release.py
src/: __init__.py  app.py  constants.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  auth.py
src/services/: __init__.py  danmaku.py
src/ui/pages/: login.py  main.py  monitor.py  settings.py
src/utils/: __init__.py  image.py  logger.py
